Sat Mar 10 01:33:15 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/main,h, main/main.c: add --no-debsig option using f_nodebsign
  * main/processarc: don't check signatures of f_nodebsign is set

Fri Mar  9 21:23:03 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * include/dpkg.h.in: add DEBSIGVERIFY
  * main/main.h, main/main.c: add bad-verify override

Fri Mar  9 19:30:22 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/controllib.pl: change outputclose to deal with comma-related
    syntax errors after processing substvars

Mon Mar  5 16:34:55 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * doc/fr/Makefile.in: add more files
  * doc/fr/dpkg.8,doc/fr/install-info.8,doc/fr/update-rc.d.8: updated
  * doc/fr/cleanup-info.8,doc/fr/dpkg-divert.8,doc/fr/dpkg-name.1,
    doc/fr/dpkg-scanpackages.8,doc/fr/dpkg-scansources.1,doc/fr/dpkg-source.1:
    added

Mon Mar  5 14:03:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: add more warning flags for gcc

Sun Mar 04 21:37:34 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po, doc/sv/dpkg.8, doc/sv/822-date.1, doc/sv/start-stop-daemon.8:
    Updated Swedish translation.
  * main/dpkg.8, utils/start-stop-daemon.8: Fixed typos.

Fri Mar  2 17:29:02 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * The Copenhagen Commit
  * ChangeLog: undo file corruption (ugh)
  * utils/start-stop-daemon.8: fix typo
  * configure.in: use AC_C_INLINE instead of our own test
  * lib/nfmalloc, include/dpkg-db.h: remove HAVE_INLINE tests, use extern
    inline directly
  * lib/varbuf.c: add inline keyowrd to varbufaddc
  * optlib/Makefile.in: undo earlier patch and build libopt.a again
  * lib/Makefile.in: use libopt.a again, and a rule to build it
  * Makefile.in: build optlib before lib
  * Makefile.conf.in: add RANLIB
  * dselect/method.h, dselect/methlist.cc, dselect/method.cc,
    dselect/methparse.cc: rename struct option to dselect_option to prevent
    conflict with getopt.h