@@ -1,3 +1,8 @@
+Sat Mar 10 15:59:39 CST 2001 Adam Heath <doogie@debian.org>
+
+  * main/filesdb.c: Use a pure file descriptor, instead of a stream, to
+    load the data, in ensure_packagefiles_available.
+
 Sat Mar 10 01:33:15 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/main,h, main/main.c: add --no-debsig option using f_nodebsign
